fixing accordion issue

--- a/src/templates/pages/random.hbs
+++ b/src/templates/pages/random.hbs
@@ -10,6 +10,38 @@ pageTitle: Admissions Routing
         <p class="breadcrumb"></p>
     </div>
 
+    <div class="collapsible collapsible--generic">
+        <h2 class="collapsible-heading" id="bethel-cccu-employee-scholarship" name="bethel-cccu-employee-scholarship">Bethel CCCU Employee Scholarship</h2>
+        <p>Up to $1,200 per year ($400 per semester) for select students in our Ed.D. program.</p>
+        <div class="collapsible-block">
+            <!-- showing financial-aid/types/scholarships/bethel-cccu-employee-scholarship -->
+            <h3>Amount</h3>
+            $400 per semester (maximum $1,200 per year).
+            <h3>Renewal</h3>
+            <p>
+                Must reapply each year.
+            </p>
+            <h3>Eligibility</h3>
+            Students who enroll at least half time (3 credits/semester) in the Doctor of Education Leadership in Higher Education program
+            at Bethel. Student must be an employee of a CCCU school. Recipients do not need to demonstrate need and are not eligible
+            for other Bethel-funded grants or scholarships. Students already receiving gift assistance from any source (including
+            military benefits and employer tuition reimbursement) that fully meets tuition are not eligible for this scholarship.
+            Recipients of this scholarship are not eligible for other Bethel-funded grants or scholarships.
+            <h3>Academic requirements</h3>
+            Must be enrolled in Bethel's Ed.D. in Leadership in Higher Education program.
+            <h3>How to apply</h3>
+            <p>Complete the appropriate application and submit it to the Office of Financial Aid prior to the start of your first
+                class.</p>
+            <p>For Fall of 2017 through Summer of 2018 complete this form
+                <a href="../../../../financial-aid/forms/cccu-employee-scholarship-1718.pdf">2017-2018 (pdf)</a>
+            </p>
+            <p>For Fall of 2017 through Summer of 2019, complete this form
+                <a href="../../../../financial-aid/forms/cccu-employee-scholarship-1819.pdf">2018-2019 (pdf)</a>
+            </p>
+            <hr>
+        </div>
+    </div>
+
     <div class="grid  grid--wrap  mt3  routing">
 
         <div class="grid-cell routing__item  u-medium-1-2  u-large-1-4">
