tweaking accordion to only do header

--- a/src/templates/pages/random.hbs
+++ b/src/templates/pages/random.hbs
@@ -10,6 +10,8 @@ pageTitle: Admissions Routing
         <p class="breadcrumb"></p>
     </div>
 
+    {{> proof-points }}
+
     <div class="collapsible collapsible--generic">
         <h2 class="collapsible-heading" id="bethel-cccu-employee-scholarship" name="bethel-cccu-employee-scholarship">Bethel CCCU Employee Scholarship</h2>
         <p>Up to $1,200 per year ($400 per semester) for select students in our Ed.D. program.</p>
