--- a/src/css/enhance/proof-points.css
+++ b/src/css/enhance/proof-points.css
@@ -38,11 +38,11 @@
     align-items: center;
 
     @mixin respond-min $medium {
-        font-size: 5rem;
+        font-size: 4rem;
     }
 
-    @mixin respond-min $large {
-    	font-size: 6rem;
+    @mixin respond-min 75em {
+    	font-size: 5rem;
     }
 }
 
