--- a/src/templates/partials/head.hbs
+++ b/src/templates/partials/head.hbs
@@ -16,10 +16,10 @@
     <link href="https://www.bethel.edu/cdn/images/favicon.ico" rel="icon" type="image/x-icon"/> 
 
     <link rel="stylesheet" type="text/css" href="css/post.css">
-    {{!-- <link rel="stylesheet" type="text/css" href="https://www.bethel.edu/cdn/css/post.css"> --}}
 
-    <script defer src="https://cdn.polyfill.io/v2/polyfill.min.js?flags=gated"></script>
-    <script src="js/lazysizes.js" async=""></script>
-    <script defer src="js/quatro.js"></script>
+    {{!-- polyfill - picture element for ie11 --}}
+    <script defer async src="https://cdn.polyfill.io/v2/polyfill.min.js?features=HTMLPictureElement&flags=gated"></script>
+    <script defer src="js/lazy.quatro.js"></script>
+    <script defer src="js/main.quatro.js"></script>
 
 </head>
