--- a/src/templates/layouts/default.hbs
+++ b/src/templates/layouts/default.hbs
@@ -12,13 +12,13 @@
 
 		{{> global__header }}
 
-		{{> school__navigation }}
+		{{!-- {{> school__navigation }} --}}
 
 
-		    	{{> site__navigation }}
+		    	{{!-- {{> site__navigation }} --}}
 
 
-		        {{> page__title }}
+		        {{!-- {{> page__title }} --}}
 
 				{% body %}
 
