--- a/src/templates/partials/heroVideo.hbs
+++ b/src/templates/partials/heroVideo.hbs
@@ -26,9 +26,9 @@
             </div>
 
             <div class="heroVideo__overlay">
-                <h2 class="heroVideo__overlay__headline">{{ this.headline }}</h2>
+                <h2 class="heroVideo__overlay__headline">Welcome to Bethel</h2>
                 <p class="ta--center">
-                    <a class="xheroVideo__overlay__button btn" href="admissions/index.php">{{ this.button }}</a>
+                    <a class="btn" href="admissions/index.php">Learn More</a>
                 </p>
             </div>
         </div>
