--- a/src/templates/pages/layout.hbs
+++ b/src/templates/pages/layout.hbs
@@ -9,6 +9,25 @@ pageTitle: Test title
 {{> heroVideo }}
 
 
+<style>
+@media (min-width: 912px) {
+
+    .global__toolbox {
+        z-index: 100;
+    }
+
+    .global__header {
+		background: rgba(0,0,0,.2);
+		z-index: 100
+	}
+}
+
+.inner {
+    max-width: 80em;
+}
+
+</style>    
+
     <section class="overFeat  pb2">
         <div class="inner" style="overflow: visible;">
             <div class="grid">
@@ -522,81 +541,6 @@ pageTitle: Test title
             </div>
 
         </div>
-
-        {{!-- <div class="lory  loryCustom  arrowsBottom">
-            <div class="loryModule  js_variableWidth  variableWidth">
-                <div class="frame  js_frame">
-                    <div class="slides  js_slides">
-
-                        <div class="js_slide">
-                            <div class="grid-pad-2x">
-                                <img class="lazyload"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://c2.staticflickr.com/8/7237/7166150373_b763f233a6_o.jpg 1600w" data-sizes="auto">
-
-                                <div class="" style="border: 1px solid #ccc; padding: 1em 2em">
-                                    <h3><a href="#">Neuroscience Research</a></h3>
-                                    <p>Biology and psychology students collaborated with researchers at Boston University to advance modern science’s understanding and treatment of memory loss.</p>
-                                </div>    
-
-                            </div>
-                        </div>
-
-                        <div class="js_slide">
-                            <div class="grid-pad-2x">
-                                <img class="lazyload"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://c2.staticflickr.com/8/7537/15695331636_14802496ff_o.jpg 1600w"
-                                    data-sizes="auto">
-                                <div class="" style="border: 1px solid #ccc; padding: 1em 2em">
-                                    <h3><a href="#">Student-Managed Investment Fund</a></h3>
-                                    <p>Our business and finance students manage a $1 million investment fund for both institutional and outside investors</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="js_slide">
-                            <div class="grid-pad-2x">
-                                <img class="lazyload"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://www.bethel.edu/news/articles/2017/images/textura.jpg 1600w"
-                                    data-sizes="auto">
-                                <div class="" style="border: 1px solid #ccc; padding: 1em 2em">
-                                    <h3><a href="#">Textura Magazine</a></h3>
-                                    <p>Our art and journalism students collaborated to produce a national award-winning cultural magazine.</p>
-
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="js_slide">
-                            <div class="grid-pad-2x">
-                                <img class="lazyload"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://c1.staticflickr.com/1/828/40675286985_1475167db7_h.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://c1.staticflickr.com/1/828/40675286985_1475167db7_h.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://c1.staticflickr.com/1/828/40675286985_1475167db7_h.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://c1.staticflickr.com/1/828/40675286985_1475167db7_h.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://c1.staticflickr.com/1/828/40675286985_1475167db7_h.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://c1.staticflickr.com/1/828/40675286985_1475167db7_h.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://c1.staticflickr.com/1/828/40675286985_1475167db7_h.jpg 1600w"
-                                    data-sizes="auto">
-                                <div class="" style="border: 1px solid #ccc; padding: 1em 2em">
-                                    <h3><a href="#">Student-Managed Investment Fund</a></h3>
-                                    <p>Our business and finance students manage a $1 million investment fund for both institutional and outside investors</p>
-                                </div>
-                            </div>
-                        </div>
-
-                        <div class="js_slide">
-                            <div class="grid-pad-2x">
-                                <img class="lazyload"  data-srcset="https://cdn1.bethel.edu/resize/unsafe/400x0/smart/https://c1.staticflickr.com/1/807/27698179718_95e1b6828f_b.jpg 400w, https://cdn1.bethel.edu/resize/unsafe/600x0/smart/https://c1.staticflickr.com/1/807/27698179718_95e1b6828f_b.jpg 600w, https://cdn1.bethel.edu/resize/unsafe/800x0/smart/https://c1.staticflickr.com/1/807/27698179718_95e1b6828f_b.jpg 800w, https://cdn1.bethel.edu/resize/unsafe/1000x0/smart/https://c1.staticflickr.com/1/807/27698179718_95e1b6828f_b.jpg 1000w, https://cdn1.bethel.edu/resize/unsafe/1200x0/smart/https://c1.staticflickr.com/1/807/27698179718_95e1b6828f_b.jpg 1200w, https://cdn1.bethel.edu/resize/unsafe/1400x0/smart/https://c1.staticflickr.com/1/807/27698179718_95e1b6828f_b.jpg 1400w, https://cdn1.bethel.edu/resize/unsafe/1600x0/smart/https://c1.staticflickr.com/1/807/27698179718_95e1b6828f_b.jpg 1600w"
-                                    data-sizes="auto">
-                                <div class="" style="border: 1px solid #ccc; padding: 1em 2em">
-                                    <h3><a href="#">Another Feature</a></h3>
-                                    <p>Our art and journalism students collaborated to produce a national award-winning cultural magazine.</p>
-
-                                </div>
-                            </div>
-                        </div>
-
-                    </div>
-                </div>
-
-                <span class="js_prev prev">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#0069aa" d="M302.67 90.877l55.77 55.508L254.575 250.75 358.44 355.116l-55.77 55.506L143.56 250.75z"/></g></svg>
-                </span>
-                <span class="js_next next">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 501.5 501.5"><g><path fill="#0069aa" d="M199.33 410.622l-55.77-55.508L247.425 250.75 143.56 146.384l55.77-55.507L358.44 250.75z"/></g></svg>
-                </span>
-            </div>
-        </div> --}}
 
     </section>
 
