--- a/src/templates/partials/section--find-program.hbs
+++ b/src/templates/partials/section--find-program.hbs
@@ -4,8 +4,8 @@
 		<div class="medium-grid-pad-1x">
 
 
-						<h2 class="mb1  center">Find your major or program</h2>
-						<p class="h4  mb2  mb3--medium  fw400">We offer more than 100 areas of study for undergrads, as well as programs for adult undergrad, graduate, and seminary students. Enter a career or area of interest to find and compare majors, programs, certificates, and licenses.</p>
+			<h2 class="mb1  center">Find your major or program</h2>
+			<p class="h4  mb2  mb3--medium  fw400">We offer more than 100 areas of study for undergrads, as well as programs for adult undergrad, graduate, and seminary students. Enter a career or area of interest to find and compare majors, programs, certificates, and licenses.</p>
 
 
 			<form id="find-program-form" class="form--find-program  mb2" action="https://www.bethel.edu/academics/program-search" method="GET">
@@ -28,13 +28,13 @@
 						<h3 class="">Find by topic</h3>
 						<ul class="linkBlock">
 							<li>
-								<a href="#">Business</a>
+								<a href="https://www.bethel.edu/academics/business-leadership/">Business</a>
 							</li>
 							<li>
-								<a href="#">Healthcare</a>
+								<a href="https://www.bethel.edu/academics/healthcare/">Healthcare</a>
 							</li>
 							<li>
-								<a href="#">Education</a>
+								<a href="https://www.bethel.edu/academics/education/">Education</a>
 							</li>
 							<li>
 								<a href="#">Sciences</a>
@@ -51,22 +51,22 @@
 						<h3 class="">Find by school</h3>
 						<ul class="linkBlock">
 							<li>
-								<a href="#">Undergrad</a>
+								<a href="https://www.bethel.edu/undergrad/academics/">Undergrad</a>
 							</li>
 							<li>
-								<a href="#">Graduate</a>
+								<a href="https://www.bethel.edu/graduate/academics/">Graduate</a>
 							</li>
 							<li>
-								<a href="#">Adult Undergrad</a>
+								<a href="https://www.bethel.edu/adult-undergrad/academics/">Adult Undergrad</a>
 							</li>
 							<li>
-								<a href="#">Bethel Seminary</a>
+								<a href="https://www.bethel.edu/seminary/academics/">Bethel Seminary</a>
 							</li>
 							<li>
-								<a href="#">Online</a>
+								<a href="https://www.bethel.edu/academics/online">Online</a>
 							</li>
 							<li>
-								<a href="#">BUILD</a>
+								<a href="https://www.bethel.edu/academics/build/academics/">BUILD</a>
 							</li>
 						</ul>
 					</div>
@@ -77,7 +77,7 @@
 						<h3 class="">Find by degree</h3>
 						<ul class="linkBlock">
 							<li>
-								<a href="#">Doctorate</a>
+								<a href="https://www.bethel.edu/academics/program-search?degree=doctoral">Doctorate</a>
 							</li>
 							<li>
 								<a href="#">Masters</a>
