--- a/src/css/global/off-canvas--global.css
+++ b/src/css/global/off-canvas--global.css
@@ -1,13 +1,10 @@
-
 .inner-wrap--global__navigation {
   position: relative;
-  background: #f5f5f5;
-  /* overflow: hidden; */
+  background: #fff;
 }
 
 .global__toolbox {
   background: $bethel--navy;
-  font-family: $gotham;
   top: 0;
   overflow-y: auto;
   contain: paint;
@@ -18,8 +15,6 @@
 }
 
 .global__toolbox .inner {
-    /* display: flex;*/
-    /* justify-content: space-between;*/
     padding: 0 2em;
 }
 
