--- a/src/css/modules/section--home.css
+++ b/src/css/modules/section--home.css
@@ -1,33 +1,30 @@
-
-
 .overFeat {
 	position: relative;
 	z-index: 1000;
-	background: #f1f1f1;
-}
-
-.overFeat .grid {
-	@mixin respond-min $large {
-		margin-bottom: -5em;
-	}
+	border-bottom: 1px solid #ddd;
+	background: #f6f9fa;
+	padding-bottom: 3em;
 }
 
 .overFeat .grid-cell {
 	position: relative;
+	background: #fff;
+	border: 1px solid #ddd;
+	margin-top: 2em;
 
 	@mixin respond-min $large {
-		transform: translateY(-5em);
+		transform: translateY(-3em);
+		margin-top: 0;
 	}
 }
 
 .overFeat img {
-	border: .5em solid #fff;
+	border: 6px solid #fff;
 }
 
-.overFeat h3 {
-	position: absolute;
-	bottom: 1em;
-	left: 1.2em;
-	padding-right: 1em;
-	text-shadow: 1px 1px 1px #333;
+.overFeat__headline {
+	padding: 1em 2em 1.5em;
+	margin: 0;
+	font-size: 1.15rem;
+	background: #fff
 }
