--- a/src/templates/partials/section--request-info.hbs
+++ b/src/templates/partials/section--request-info.hbs
@@ -1,10 +1,10 @@
-<section class="grid-section  mt0  pv6  bkg--gradient-navy-blue">
-	<div class="inner">
-		<div class="grid  grid--center">
+<div class="sectionRequestInfo" style="background: #f6f9fa;">
+	<div class="inner  pv6">
+		<div class="grid">
 			<div class="grid-cell">
-				<div class="medium-grid-pad-1x">
-					<h3 class="beta  mb2  center  fw300" style="color: #fff">Request information</h3>
-					<form class="form--request-info  validate-form" action="" method="post" >
+				<div class="grid-pad-2x">
+					<h3 class="alpha  pt1  center  fw500">Request information</h3>
+					<form class="form--request-info  validate-form  pv3" action="" method="post" >
 					<blockquote class="center">
 						<fieldset>
 							Hello, my <label class="form--request-info__label" for="user_name">name</label> is <input required="" name="user[firstName]" placeholder="First" id="user_firstName" value="" type="text" title="First name required">
@@ -23,7 +23,7 @@
 						</fieldset>
 					</blockquote>
 					<div class="form--request-info__error"></div>
-					<button id="form--request-info__submit" class="btn  btn-yellow  center  mt3" jtype="submit">Get info</button>
+					<button id="form--request-info__submit" class="btn  btn-outline  center  mt3" jtype="submit">Request info</button>
 					</form>
 					<div class='form--request-info--success' style="display:none">
 						<p style="color:#fff" class="center">Thanks for requesting information! Check your email, you should be hearing from us soon.</p>
@@ -43,7 +43,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</div>
 
 <script type="text/javascript">
 	var form = document.querySelector('.form--request-info');
