--- a/src/css/modules/social-media.css
+++ b/src/css/modules/social-media.css
@@ -33,3 +33,18 @@
 	margin-right: 1em;
 	font-family: $gotham;
 }
+
+.twitter-quote-link {
+	background-color: #eee;
+}
+.twitter-quote-link:hover {
+	background-color: #ddd;
+}
+.twitter-quote-link a {
+	color: inherit;
+	text-decoration: none !important;
+}
+.twitter-quote-link::after {
+	background-image: url(https://www.bethel.edu/_cascade/files/symbols.svg#twitter);
+
+}
